# emlop

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build.rs  completion.bash  completion.fish  completion.zsh  emlop.toml  rustfmt.toml
.github/workflows/: audit.yml  ci.yml
benches/: emerge-p.gcc.out  emerge-p.kde.out  emerge-p.qt.out  exec_compare.crs  exec_compare.rs  stdcomp.sh
docs/: COMPARISON.md  CONTRIBUTING.md  DB.md  ROADMAP.md  config.asc  config.cast  demo.md  demo.sh  emlop.demo.toml  log.asc  log.cast  predict.asc  predict.cast  stats.asc  stats.cast
src/: cli.rs  commands.rs  config.rs  date.rs  datetime.rs  main.rs  parse.rs  parser.rs  proces.rs  table.rs
src/config/: cli.rs  toml.rs  types.rs
src/parse/: ansi.rs  current.rs  history.rs  proces.rs
test/: build.log.color  catname.txt  emerge-p.basic.out  emerge-p.blocker.out  generate.sh  mtimedb.empty  mtimedb.noresume
tests/: 1Q-2024  4Q-2022  build.log.notag  build.log.onlytag  build.log.short  build.log.trim  catname.txt  commands.rs  emerge  emerge-p.bin.out  emerge-pv.basic.out  generate.sh  mtimedb.backuponly  mtimedb.binaries  mtimedb.mainempty  mtimedb.ok  mtimedb.updates  python
