[package]
name = "emlop"
version = "0.7.1"
description = "A fast, accurate, ergonomic emerge.log parser"
keywords = ["gentoo", "portage", "emerge"]
categories = ["command-line-utilities", "parsing"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/vincentdephily/emlop"
repository = "https://github.com/vincentdephily/emlop"
authors = ["Vincent de Phily <moltonel@gmail.com>",
           "Illia Shestakov <ishestakov@airmail.cc>",
           "Alexis <flexibeast@gmail.com>"]
edition = "2021"
rust-version = "1.74.1"
exclude = ["benches", "docs", "rustfmt.toml", ".github", ".gitignore"]

[lints.clippy]
missing_const_for_fn = "warn"

[dependencies]
anyhow = "1.0.32"
atoi = "2.0.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
clap_complete = { version = "~4.5.42", optional = true }
env_logger = { version = "0.11.0", default-features = false, features = ["auto-color"] }
flate2 = "1.0.28"
libc = { version = "0.2.126", default-features = false }
log = "0.4.11"
memchr = "2.7.4"
regex = { version = "1.10.0", default-features = false, features = ["std", "perf-inline", "perf-literal", "unicode-case"] }
rev_lines = "0.3.0"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.89"
time = {version = "~0.3.18", features = ["parsing", "formatting", "local-offset", "macros"]}
toml = "0.8.8"

[dev-dependencies]
assert_cmd = "~2.0.0"

[[bench]]
# This is meant to be started directly, using scriptisto not cargo
name = "exec_compare"
bench = false
# https://github.com/rust-lang/cargo/issues/13456
path = "benches/exec_compare.rs"

[features]
# Experimental features, may require nightly compiler.
# Currently only benchmarking.
unstable = []
# Generate shell completions at runtime instead of using static version.
# Only intended for developers.
clap_complete = ["dep:clap_complete"]

[profile.release]
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
lto = true
panic = "abort"
